<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="clip_horizontal|center"
            android:text="@string/app_name"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/songsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_button" />

            <Button
                android:id="@+id/concertButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plan_the_concert" />

            <Button
                android:id="@+id/ticketButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calculete_the_tickets" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>