<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowConcertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/latestConcert5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="clip_horizontal|center"
            android:text="@string/your_Latest_Concert"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_About"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/concertValue"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/empty_text"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:text="@string/date_Title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dataValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty_text"
                android:textSize="24sp" />
        </LinearLayout>

        <Button
            android:id="@+id/setButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>